--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,48 @@
     GENERAL
 -------------*/
 
+body {
+    background-color: #f6f5f3;
+}
+
+main {
+    font-family: "Montserrat", sans-serif;
+    padding: 1.25rem;
+    max-width: 75rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.img-fluid {
+    width: 100%;
+    height: 100%;
+}
+
 /* -------------
     TYPOGRAPHY
 ---------------*/
 
 h1 {
     font-family: "Nerko One", cursive;
-    font-size: 3.125rem;
+    font-size: 2.875rem;
     color: #ff9614;
     text-align: center;
     text-shadow: 1px 1px 1px #827f7f;
     padding: .9375rem 1.5625rem;
+}
+
+h2 {
+
+    color: #4e3969;
+    padding: 1.25rem 0;
+    font-size: 1.75rem;
 }
 
 /* ------------
@@ -35,16 +66,51 @@ h1 {
 
 header {
     background-color: #fff;
-    position: sticky;
+    /* position: sticky;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 10; */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 /* ------------
     MAIN
 --------------*/
+
+/* RECIPE INTRO */
+
+h2 span {
+    display: none;
+}
+
+.recipe-intro>h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+    color: grey;
+    font-size: 1.125rem;
+}
+
+.recipe-details {
+    background-color: #fff;
+    padding: 1.5625rem 0 2.5rem 1.25rem;
+}
+
+.recipe-details h3 {
+    font-size: 1rem;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    padding: .625rem 0;
+    font-size: .75rem;
+}
+
+li p {
+    font-weight: 300;
+}
 
 /* ------------
     FOOTER
@@ -59,14 +125,44 @@ header {
 /* Viewport TABLET da 768px */
 
 @media screen and (min-width: 768px) {
-    
-    /* TYPOGRAFY */
-    
+
     h1 {
         text-align: left;
     }
 
+    h2 span {
+        display: inline;
+    }
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    li {
+        width: calc(100% / 3);
+    }
 
 }
 
-/* Viewport MOBILE da 992px */
+/* Viewport DESKTOP da 992px */
+
+@media screen and (min-width: 992px) {
+
+    .row {
+        flex-direction: row;
+    }
+
+    .col .img-fluid {
+        width: 70%;
+    }
+
+    .recipe-details {
+        width: 30%;
+    }
+
+    li {
+        width: 100%;
+    }
+
+}
